--- a/ScreenRecognition.Desktop/Resources/Styles/MessageResult/MessageResultWindow.xaml
+++ b/ScreenRecognition.Desktop/Resources/Styles/MessageResult/MessageResultWindow.xaml
@@ -13,7 +13,7 @@
         Background="#00000000"
         ResizeMode="NoResize"
         WindowStyle="None"
-        Topmost="True"
+        Topmost="False"
         AllowsTransparency="True"
         WindowStartupLocation="CenterOwner"
         MouseDoubleClick="resultWindow_MouseDoubleClick">
