теперь работает страница настроек (лучше там не трогать сохранения настроек (любых!!), а то всё может сломаться и уже фиг починишь)

--- a/ScreenRecognition.Desktop/Resources/Styles/MessageResult/MessageResultWindow.xaml
+++ b/ScreenRecognition.Desktop/Resources/Styles/MessageResult/MessageResultWindow.xaml
@@ -13,7 +13,7 @@
         Background="#00000000"
         ResizeMode="NoResize"
         WindowStyle="None"
-        Topmost="False"
+        Topmost="True"
         AllowsTransparency="True"
         WindowStartupLocation="CenterOwner"
         MouseDoubleClick="resultWindow_MouseDoubleClick">
