--- a/ScreenRecognition.Desktop/View/Windows/MainWindow.xaml
+++ b/ScreenRecognition.Desktop/View/Windows/MainWindow.xaml
@@ -55,9 +55,9 @@
                            VerticalAlignment="Center"
                            TextAlignment="Center"
                            Margin="0 0 50 0"
-                           Foreground="Green">
+                           Foreground="{Binding ServerStatusCustom.Property.TextColor.Name, Mode=OneWay}">
                     <Run Text="Статус сервера:" />
-                    <Run Text="В сети"
+                    <Run Text="{Binding ServerStatusCustom.Property.Text, Mode=OneWay}"
                          FontWeight="Bold" />
                 </TextBlock>
                 <Border CornerRadius="5"
