--- a/ScreenRecognition.Desktop/View/Pages/HistoryAndTranslatePage.xaml
+++ b/ScreenRecognition.Desktop/View/Pages/HistoryAndTranslatePage.xaml
@@ -44,6 +44,7 @@
                 </DockPanel>
                 <DockPanel LastChildFill="True">
                     <ListView Margin="5"
+                              Background="Transparent"
                               ItemsSource="{Binding HistoryList.Property}">
                         <ListView.ItemTemplate>
                             <DataTemplate>
