--- a/ScreenRecognition.Desktop/View/Pages/HistoryAndTranslatePage.xaml
+++ b/ScreenRecognition.Desktop/View/Pages/HistoryAndTranslatePage.xaml
@@ -3,8 +3,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:ScreenRecognition.Desktop.View.Pages"
-      xmlns:ViewModel="clr-namespace:ScreenRecognition.Desktop.ViewModel"
       xmlns:hc="https://handyorg.github.io/handycontrol"
+      xmlns:ViewModel="clr-namespace:ScreenRecognition.Desktop.ViewModel.PageViewModels"
       x:Class="ScreenRecognition.Desktop.View.Pages.HistoryAndTranslatePage"
       mc:Ignorable="d"
       d:DesignHeight="450"
